2007-01-03  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/Banshee.TrackView.Columns/RatingColumn.cs: Make the
	column a fixed width and not resizable (BGO #385547)

	* src/Core/Banshee.Base/Gui/RatingRenderer.cs: Added static Width propery

2007-01-03  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/PlaylistView.cs: Call CreatePopupableHeader on the
	columns after adding to the view (must be done after AppendColumn)

	* src/Core/Banshee/Banshee.TrackView.Columns/TrackViewColumn.cs: Added
	clever hack from Peter Johanson to allow button press events on tree
	view column headers, thus display a context menu on each column header
	on right click, allowing to hide the column or show the columns dialog

2007-01-03  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/Banshee.TrackView.Columns/*.cs: Make the SchemaEntry
	properties all public so they can be picked up by gconf schema extractor

	* src/Core/Banshee/banshee-interface.schemas.in:
	* src/Core/Banshee.Base/banshee-core.schemas.in: Updated, schema entries
	are sorted by key now

	* build/GConfSchemaExtractor.cs: Sort the schema entries by key to ensure
	that the schema content doesn't change just because the reflection 
	iterating order in the assembly may have changed, which will cause 
	false modifications (this is apparent when compiling between gmcs/make and
	gmcs/MonoDevelop)

2007-01-03  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/Banshee.TrackView.Columns/*.cs: Use an enum to ID
	columns and their sort orders, will make adding new columns easier; always
	sort track number in ascending order if not explicitly sorting on the
	track number column; sort by the parent folder uri of a track before
	sorting by album, which allows the same album to be in the library 
	multiple times in different file system locations, but grouped and sorted
	properly in the view when sorting by track, album, or artist

	* src/Core/Banshee/Banshee.TrackView.Columns/UriColumn.cs: Added Uri Column;