@@ -14,5 +14,5 @@ FIXES (BGO):
 	
 FIXES (BNC):
 	202861 - Peter Teichman
-
-
+	218993 - Peter Teichman
+	218997 - Peter Teichman
